--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ timezone: UTC
 # URL
 baseurl: ""
 url: "https://tranquil-lebkuchen-cc3871.netlify.app" # Your GitHub Pages URL
+root: /
 
 permalink: :year/:month/:day/:title/
 permalink_defaults:
