--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [build]
-  command = "sh deploy.sh"
+  command = "hexo generate"
   publish = "public"
-  environment = { NODE_VERSION = "lts/*", NODE_ENV = "production" }
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
