--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,8 @@ timezone: UTC
 baseurl: ""
 url: "https://tranquil-lebkuchen-cc3871.netlify.app" # Your GitHub Pages URL
 
-
-permalink: :year/:month/:day/:title/
-
+permalink: :title/
 permalink_defaults:
-pretty_urls:
-  trailing_index: true
-  trailing_html: true
 
 # Directory
 source_dir: source
@@ -73,7 +68,6 @@ meta_generator: true
 # Date / Time format
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-updated_option: "mtime"
 
 # Pagination
 per_page: 0
@@ -86,12 +80,6 @@ ignore:
 
 # Extensions
 theme: next
-
-# Deployment
-deploy:
-  type: git
-  repo: https://github.com/khalidfathyFL/MicroBIM-Docs.git
-  branch: main
 
 # Search
 search:
